--- a/assets/style.css
+++ b/assets/style.css
@@ -162,12 +162,11 @@ nav ul li form input#button-nav:hover {
     opacity: 80%;
 }
 
-article {
+#content article {
     display: flex;
     justify-content: space-between;
     font-family: 'Krona One', sans-serif;
     margin-bottom: 8%;
-
     cursor: pointer;
 }
 
@@ -182,11 +181,11 @@ article {
 
 }
 
-aside img {
+section img {
     width: 100%;
 }
 
-aside h4 {
+section h4 {
     padding: 1rem 0;
     font-size: 70%;
     text-align: center;
@@ -194,13 +193,13 @@ aside h4 {
 
 }
 
-aside ul {
+section ul {
     display: flex;
     justify-content: space-around;
     padding: 20px 0;
 }
 
-aside ul li {
+section ul li {
     list-style: none;
     font-size: 60%;
 }
@@ -213,52 +212,69 @@ svg {
     color: black;
 }
 
-/* aboutus */
-#aboutus {
-    background-color: #f4ecec;
-    margin-top: -0.3rem;
-    font-family: 'Akaya Kanadaka', cursive;
-}
 
-#aboutus h6 {
-    font-size: 5rem;
-    text-align: center;
-    padding: 3rem;
+/* aboutus */
+
+#aboutus {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 .about {
-    display: flex;
-    align-items: center;
-}
-
-.about h4 {
-    font-size: 2rem;
-    padding: 1rem 0;
+    box-shadow: 8px 8px 5px 0 #f4e4ec;
+    width: 70%;
     text-align: center;
+    padding: 10%;
+    margin: 5%;
 }
 
-.pemilik {
-    width: 60%;
-
-}
-
-.pemilik img {
-    width: 90%;
-    align-items: center;
-    border-radius: 20%;
-
-}
-
-.text {
-    width: 30%;
+.about h3 {
     font-size: 2rem;
-    text-align: center;
-    margin-bottom: 1rem;
+    padding: 0.5rem;
+    margin-bottom: 3rem;
+    text-shadow: 2px 2px #ffa7b6;
 }
+
+.about section {
+    font-size: 1rem;
+    color: #ffa7b6;
+
+}
+
+aside article {
+    justify-items: center;
+    text-align: center;
+    margin: 1rem;
+    padding: 2rem 4rem;
+    border: 1px dotted #ffdae0;
+    border-radius: 5px;
+    background-color: #ffdae0;
+    color: #664c51;
+}
+
+aside article img {
+    width: 100%;
+    padding: 1.5rem 0;
+    margin: 1rem 0;
+}
+
+aside article h4 {
+    font-size: 2rem;
+}
+
+aside article h6 {
+    border: 1px solid #664c51;
+    padding: 1rem;
+    margin-top: -2rem;
+    border-radius: 5px;
+}
+
 
 /* footer */
 
-div#footer {
+footer {
     padding: 2rem;
     font-size: x-large;
     font-style: oblique;
@@ -382,12 +398,12 @@ div#footer {
     }
 
 
-    aside h4 {
+    secsion h4 {
         font-size: 100%;
 
     }
 
-    aside ul li {
+    section ul li {
         font-size: 50%;
     }
 
@@ -395,23 +411,14 @@ div#footer {
         display: none;
     }
 
-    /* abaout Us */
-    #aboutus h6 {
-        margin-top: -2rem;
-    }
-
-    #aboutus h6 {
-        font-size: 40px;
-    }
-
-    .about {
+    /* about us */
+    #aboutus {
         display: flex;
         flex-direction: column;
     }
 
-    .text {
-        width: 90%;
-        text-align: center;
-        font-size: 1rem;
+    aside article {
+        background-color: #f4ecec;
+
     }
 }
